# personal-ai-dashboard

./: README.md  makefile  personal-ai-dashboard.code-workspace
backend/: .env.example  README.md  init_db.py  makefile  pyproject.toml  run_dev.py
backend/app/: config.py  database.py  main.py
backend/app/api/: websocket.py
backend/app/api/auth/: auth.py
backend/app/api/conversations/: conversations.py
backend/app/models/: __init__.py  conversation.py  daily_insight.py  user.py
backend/app/schemas/: auth.py  conversation.py  insight.py
backend/app/services/: realtime_handler.py
backend/app/utils/: auth.py
docs/: backend-api-requirements.html  frontend-requirements.html
frontend/: README.md  middleware.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(auth)/: layout.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(auth)/signup/: page.tsx
frontend/app/(dashboard)/: layout.tsx
frontend/app/(dashboard)/conversation/: page.tsx
frontend/app/(dashboard)/dashboard/: page.tsx
frontend/app/(dashboard)/history/: page.tsx
frontend/app/(dashboard)/insights/: page.tsx
frontend/app/(dashboard)/settings/: page.tsx
frontend/app/api/auth/login/: route.ts
frontend/app/api/auth/logout/: route.ts
frontend/app/api/auth/me/: route.ts
frontend/app/api/auth/signup/: route.ts
frontend/app/api/conversations/start/: route.ts
frontend/components/ui/: button.tsx
frontend/lib/api/: auth.ts  client.ts  conversations.ts
frontend/lib/contexts/: auth-context.tsx
frontend/lib/realtime/: conversation-handler.ts
frontend/types/: auth.ts  conversation.ts  index.ts  insight.ts
