[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "numpy>=2.3.0",
    "openai>=1.86.0",
    "pydub>=0.25.1",
    "sounddevice>=0.5.2",
]

[tool.ruff]
exclude = ["__pycache__", ".git", ".mypy_cache", ".venv"]
line-length = 119
target-version = "py310"

[tool.ruff.lint]
ignore = [
  "PTH",
  "D",
  "T201", # print書かない
  "RET504", # unnecessary-assign
  "INP001", # __init__.pyなし
  "ERA001", # commented-out-code
  "ANN401", # any-type
  "FIX002", # line-contains-todo
  "TD002", # missing-todo-author
  "TD003", # missing-todo-link
  "FBT001", # Boolean-typed positional argument in function definition
  "FBT002", # Boolean default positional argument in function definition
  "BLE001", # Do not catch blind exception: `Exception`
  "TRY201", # Use `raise` without specifying exception name
  "COM812",
  "E501", # line too long
  "TRY003", # Use `raise` without specifying exception name
  "EM102", # Use `raise` without specifying exception name
  "PLR0913", # Use `raise` without specifying exception name
  "EM101", # Use `raise` without specifying exception name
]
select = ["ALL", "UP"]

[tool.ruff.lint.per-file-ignores]
"test/*" = [
  "S101", # assertを許す
  "PLR2004", # magic-value-comparison
  "TC001", # typing-only-first-party-import
  "PT011", # pytest-raises-too-broad
  "SLF001", # Private member accessed
  "E501", # line too long
  "TRY003", # Use `raise` without specifying exception name
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
force-wrap-aliases = true

[tool.mypy]
ignore_missing_imports = true
# follow_imports = normal
disallow_any_decorated = false 
disallow_any_explicit = false # 変数でAny禁止
disallow_any_expr = false # 式でのAny禁止
disallow_any_generics = true # ジェネリックで書かないの禁止
disallow_any_unimported = false 
disallow_subclassing_any = true # Anyのサブクラス禁止

check_untyped_defs = true 
disallow_incomplete_defs = true # 一部の型定義を禁止 `def f(a: int, b)`
disallow_untyped_calls = true # 型なし関数呼び出し禁止 `a: int = f()`
disallow_untyped_decorators = true 
disallow_untyped_defs = true # 型なし関数定義禁止 `def f(a: int) -> int`
no_implicit_optional = true 

allow_redefinition = true # 変数の再定義を禁止
warn_redundant_casts = true 
warn_return_any = true 
warn_unreachable = true # 辿りつかないコードの検出
warn_unused_ignores = true 

show_column_numbers = true
show_error_context = true

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "ruff>=0.11.13",
]
